# render

./: .gitignore  CMakeLists.txt  cube.3d
platform/macos/: main.mm
platform/window/render/: main.cpp  render.sln  render.vcxproj  render.vcxproj.filters
render/: main.cpp
render.xcodeproj/: project.pbxproj
render.xcodeproj/project.xcworkspace/xcshareddata/: render.xcscmblueprint
render.xcodeproj/project.xcworkspace/xcuserdata/chao.xcuserdatad/: UserInterfaceState.xcuserstate
render.xcodeproj/xcuserdata/chao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
render.xcodeproj/xcuserdata/chao.xcuserdatad/xcschemes/: render.xcscheme  xcschememanagement.plist
source/: Mesh.cpp  Mesh.h  canvas.cpp  canvas.h  color.cpp  color.h  image.h  main.cpp  matrix.h  rmath.h  rutil.h  texture.cpp  texture.h  vector.cpp  vector.h  vertex.h  window.h
